gphoto2: make sure to not call g_mutex_clear twice, causing a crash

https://bugzilla.gnome.org/show_bug.cgi?id=685909